Load user role from JWT